test disabling Codecov upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,4 +65,5 @@ jobs:
       with:
         file: ./coverage.xml
         fail_ci_if_error: true
+        if: github.event.pull_request.head.repo.fork == false
         token: ${{ secrets.CODECOV_TOKEN }}
