testing id-token: write

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,3 +66,5 @@ jobs:
         file: ./coverage.xml
         fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
+    permissions:
+        id-token: write
